# salt-fga

./: .gitignore  CLAUDE.md  Makefile  README.md  TESTING.md  docker-compose.yml  openfga.json.example  pyproject.toml  salt.skill
examples/: README.md  openfga-demo.py  openfga-quickstart.sh
src/openfga/: __init__.py  authorization_model.fga  authorization_model.fga.yaml  checker.py  client.py  commands.py  config.py  store_manager.py
src/salt/: __init__.py  auth.py  cli.py  client.py  config.py  formatter.py
src/salt/commands/: __init__.py  clusters.py  cmd.py  execute.py  jobs.py  keys.py  minions.py  ping.py
src/skills/: README.md
src/skills/salt/: README.md  SKILL.md
src/skills/salt/references/: commands.md  configuration.md
tests/: test_openfga.py  test_salt_cli.sh
