[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "salt-fga"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
    "fire>=0.7.1",
    "openfga-sdk>=0.9.9",
    "requests>=2.32.5",
    "rich>=14.3.3",
]

[project.scripts]
salt-fga = "salt.cli:main"

[tool.hatch.version]
path = "src/salt/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/salt"]

[tool.uv]
package = true

[dependency-groups]
dev = ["pytest>=9.0.2", "twine>=6.2.0"]
